# legel-agentic-system

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  check_legal_apis_status.py  demo_legal_data_flow.py  docker-compose.fast.yml  docker-compose.yml  mcp_demo.py  nlweb_chat_demo.html  openapi.yaml  package.json  pyproject.toml  quick_start_legal_apis.py  requirements.txt  run_test.sh  start.sh  start_system.py  stop.sh  test_apis.py  todolist.md  tsconfig.json  web_app.py  web_app_apple.py  web_app_enhanced.py  web_app_mcp_integrated.py  web_app_simple.py  websocket-events.yaml
.claude/agents/: code-logic-analyzer.md  python-architecture-expert.md  security-cost-reviewer.md  strategic-planner.md  strict-executor.md  tech-solution-researcher.md  web-content-code-analyzer.md
NLWeb/config/: config_webserver.yaml.bak
config/: mcp_config.yaml
data/: cases.json
examples/: legal_data_integration_demo.py  legal_data_integration_demo_offline.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
mcp_case_extractor/: Dockerfile  README.md  __init__.py  chatbox_agent.py  config.yaml  file_parser.py  integrations.py  models.py  patterns.py  requirements.txt  server.py  validators.py
mcp_lawyer_server/: Dockerfile  README.md  __init__.py  config.yaml  conversation_manager.py  graphrag_retrieval.py  lawyer_agent.py  legal_context.py  opponent_simulator.py  requirements.txt  run_server.py  server.py  test_integration.py
scripts/: __init__.py  import_data.py  init_system.py  wait_for_databases.py
src/: __init__.py  main.py
(+70 files in other folders)
