[tool.poetry]
name = "court-argument-simulator"
version = "0.1.0"
description = "Legal argument simulator using GraphRAG and Vector search"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
qdrant-client = "^1.7.0"
neo4j = "^5.15.0"
openai = "^1.6.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
supabase = "^2.3.0"
httpx = "^0.25.2"
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
tenacity = "^8.2.3"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.2"
spacy = "^3.7.2"
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true